--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,13 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+font:
+  - family: Lato 
+    fonts :
+      - asset : assets/fonts/Lato-Regural.ttf
+      - asset : assets/fonts/Lato-Bold.ttf
+        weight : 700
+  - family: Anton 
+    fonts :
+      - asset : assets/fonts/Anton-Regural.ttf
+
